Fixed overflowing text

--- a/static/index.css
+++ b/static/index.css
@@ -29,7 +29,7 @@ h2 {
     grid-column: 1/4;
     text-align: center;
     flex-grow: 1;
-    font-size: 3em;
+    font-size: 2em;
     margin: 0.3em;
 }
 .app_name_banner {grid-column: 1/4; grid-row: 1;}
@@ -95,7 +95,6 @@ button.install_button {
 }
 .unavailable_filler_android,.unavailable_filler_apple {
     grid-row: 4/6;
-    font-size: 2em;
     align-content: center;
     flex-wrap: wrap;
 }
